# youtube-summary

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
pages/: 01_YouTubers.py  02_Baixar_Notas.py  03_Indexacao.py  04_Chat.py  __init__.py
src/: __init__.py  cli.py  exceptions.py  rag.py  youtube.py
src/utils/: __init__.py  logging_setup.py  youtube_helpers.py
tests/: __init__.py  conftest.py  test_rag.py  test_youtube_helpers.py  test_youtube_manager.py
