[project]
name = "youtube-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain[together]>=0.3.27",
    "python-dotenv>=1.1.0",
    "youtube-transcript-api>=1.2.2",
    "yt-dlp>=2025.7.21",
    "langchain-community>=0.3.7",
    "chromadb>=0.5.5",
    "langchain-groq>=0.3.7",
    "loguru>=0.7.3",
    "langchain-chroma>=0.2.5",
    "streamlit>=1.48.0",
    "together>=1.5.24",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
    "pytest>=8.3.2",
    "mypy>=1.17.1",
    "pandas-stubs>=2.3.0.250703",
]

[tool.ruff]
format.docstring-code-format = true
lint.select = ["ALL"]
lint.ignore = [
    "ANN401", # Any as type annotation is allowed
    "C901",   # complex structure
    "COM812", # Conflict with formatter
    "CPY",    # No copyright statements
    "D",      # limited documentation
    "DOC",    # limited documentation
    "FIX002", # line contains to do
    "ISC001", # Conflict with formatter
    "S101",   # can use asserting
    "TD002",  # missing to do author
    "TD003",  # missing to do a link
    "TD004",  # missing colon in to do
    "FBT001", # Boolean-typed positional argument in function definition
    "FBT003", # Boolean positional value in function call
    "D203",
    "D213",
]
